[tool.poetry]
name = "CustomPATH"
version = "0.1.0"
description = "Inject custom path's in the Sublime Text's $PATH (or technicaly the plugin containers' $PATH, but that is usualy good enough)."
authors = [
  "Victor Häggqvist (https://github.com/victorhaggqvist)",
  "Simon Hänisch (https://github.com/simonhaenisch)",
  "Alan Reyes <kutt@katrea.net>"
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.1"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
